button small fix

--- a/src/components/UI-kit/Button/Button.scss
+++ b/src/components/UI-kit/Button/Button.scss
@@ -77,7 +77,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 1.22;
-    width: 220px;
+    width: 195px;
     align-self: flex-end;
     background: url("../../../images/tertiary-icon.svg");
     background-repeat: no-repeat;
@@ -92,7 +92,6 @@
       background: url("../../../images/tertiary-icon-hover.svg");
       background-repeat: no-repeat;
       background-position: 16px 12px;
-      opacity: 0.7;
       color: $pink;
       stroke: $pink;
     }
